unpackaged/objects/TestContact__c.object
<CustomObject>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatingDate__c</fullName>
        <label>CreatingDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <label>PhoneNumber</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sr_Feature__c</fullName>
        <label>Sr Feature</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feature 1</fullName>
                </value>
                <value>
                    <fullName>Feature 2</fullName>
                </value>
                <value>
                    <fullName>Feature 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sr_type__c</fullName>
        <label>Sr type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sr_Feature__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>previous value 1</fullName>
                </value>
                <value>
                    <fullName>previous value 2</fullName>
                </value>
                <value>
                    <fullName>previous value 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Talent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Talent</label>
        <referenceTo>Talent__c</referenceTo>
        <relationshipLabel>TestContact</relationshipLabel>
        <relationshipName>TestContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Third</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>future_picklist__c</fullName>
        <label>future picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ertrerer</fullName>
                </value>
                <value>
                    <fullName>654645646</fullName>
                </value>
                <value>
                    <fullName>55435</fullName>
                </value>
                <value>
                    <fullName>85765775758857</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>future_picklisterer__c</fullName>
        <label>future picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>456</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>total__c</fullName>
        <label>total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>year_1__c</fullName>
        <label>year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>year_2__c</fullName>
        <label>year 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>TestContact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestContact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>